corrected basic output, and ended Index out of bounds error on homepage

--- a/src/main/resources/static/app.css
+++ b/src/main/resources/static/app.css
@@ -43,6 +43,10 @@ body {
     outline: 1px solid #ccc;
 }
 
+.inputBox{
+    align-items: center;
+}
+
 
 
 
